k3s/infra/controllers/external-secrets/21-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-bitwarden-egress
  namespace: external-secrets
spec:
  endpointSelector: {}
  egress:
    # Allow DNS to CoreDNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Allow HTTPS to Bitwarden and other external APIs
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
